compiler/eight-tests/tests/snapshots/ui_tests__compiler_ui_tests@syntax__trivial__unexpected_character.test.snap
---
source: compiler/eight-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/syntax/trivial/unexpected_character.test
input_file: compiler/eight-tests/tests/ui/syntax/trivial/unexpected_character.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: syntax::unexpected_character

  × found illegal character during parsing
   ╭─[tests/ui/syntax/trivial/unexpected_character.test:1:11]
 1 │ type Vec2 @ {
   ·           ┬
   ·           ╰── the character '@' does not parse into any tokens
 2 │   x: i32,
   ╰────
