compiler/eight-tests/tests/snapshots/ui_tests__compiler_ui_tests@syntax__trivial__unexpected_token.test.snap
---
source: compiler/eight-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/syntax/trivial/unexpected_token.test
input_file: compiler/eight-tests/tests/ui/syntax/trivial/unexpected_token.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: syntax::unexpected_token

  × found unexpected token during parsing
   ╭─[tests/ui/syntax/trivial/unexpected_token.test:1:11]
 1 │ fn test() unexpected_token {
   ·           ────────┬───────
   ·                   ╰── was not expecting to find 'unexpected_token' in this position
   ╰────
