compiler/eight-tests/tests/snapshots/ui_tests__compiler_ui_tests@syntax__trivial__unterminated_token.test.snap
---
source: compiler/eight-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/syntax/trivial/unterminated_token.test
input_file: compiler/eight-tests/tests/ui/syntax/trivial/unterminated_token.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: syntax::unfinished_token

  × expected another '|' character here
   ╭─[tests/ui/syntax/trivial/unterminated_token.test:1:1]
 1 │ |
   · ┬
   · ╰── this alone does not form a valid token
   ╰────
  help: did you forget to add a '|' character here?
